change to new 1A workflow

--- a/app/containers/MainLayout/style.scss
+++ b/app/containers/MainLayout/style.scss
@@ -26,4 +26,9 @@
     padding: 3rem;
     min-height: calc(100% - 92px);
   }
+  .loading-indicator {
+    min-height: calc(100% - 92px);
+    margin: 0rem auto;
+    padding-top: 25%;
+  }
 }
