--- a/app/containers/Distractions/style.scss
+++ b/app/containers/Distractions/style.scss
@@ -7,17 +7,7 @@
     }
 }
 
-.Distractions-Dashboard {
-    .dashboard-stats {
-        text-align: center;
-        width: '50%';
-        flex: 1 1 auto;
-        @include fontSizeLineHeight(1.5);
-        span {
-            @include fontSizeLineHeight(3);
-        }
-    }
-}
+.Distractions .dashboard-subheading { margin: 25px 0px !important; }
 
 .card-content {
     margin: 60px 0px;
