Procedure selector for distraction pages

--- a/app/containers/DistractionsCategory/style.scss
+++ b/app/containers/DistractionsCategory/style.scss
@@ -3,4 +3,5 @@
 .extra-large { @include fontSizeLineHeight(4); }
 .Distraction-Category-Card {
     margin-bottom: 20px;
+    &:first-child { margin-top: 20px; }
 }
