--- a/app/containers/UserManagement/style.scss
+++ b/app/containers/UserManagement/style.scss
@@ -1,4 +1,5 @@
-.Dashboard-Welcome {
-    h3 { margin-bottom: 0px;}
-    h4 { margin-top: 0px;}
+@import '../../styles/global-styles';
+
+tr:hover {
+    background: $light-grey !important;
 }
