Add in error messaging

--- a/app/components/Modal/DeleteModal/style.scss
+++ b/app/components/Modal/DeleteModal/style.scss
@@ -15,3 +15,9 @@
     font-size: 14px;
     line-height: 19px;
 }
+
+.Paragraph-Error {
+    color: $red;
+    font-size: 14px;
+    line-height: 19px;
+}
