--- a/app/containers/EMMCases/style.scss
+++ b/app/containers/EMMCases/style.scss
@@ -4,3 +4,29 @@
     font-size: 26px;
     line-height: 36px;
 }
+
+.request-buttons {
+    display: flex;
+    justify-content: space-between;
+    margin-top: 40px;
+    width: 50%
+}
+
+.search-button {
+    margin-left: 10px;
+}
+
+.search {
+    font-size: 18px;
+    font-weight: bold;
+    line-height: 24px;
+    margin-bottom: 20px;
+    margin-top: 25px;
+}
+
+.recent {
+    font-size: 18px;
+    font-weight: bold;
+    line-height: 24px;
+    margin-top: 120px;
+}
