Display details of one case

--- a/app/containers/EMM/style.scss
+++ b/app/containers/EMM/style.scss
@@ -2,5 +2,18 @@
 
 .header {
     font-size: 26px;
-    line-height: 36px;
+    display: flex;
+}
+
+.table-row {
+    display: flex;
+}
+
+.first-column {
+    width: 37%;
+}
+
+.table-row-font {
+    font-size: 20px;
+    margin-bottom: 35px;
 }
