--- a/app/components/Modal/UserModal/UserModalStep1/style.scss
+++ b/app/components/Modal/UserModal/UserModalStep1/style.scss
@@ -15,3 +15,17 @@
     font-size: 14px;
     line-height: 19px;
 }
+
+.loader {
+    border: 6px solid $light-grey;
+    border-top: 6px solid $light-blue;
+    border-radius: 50%;
+    width: 20px;
+    height: 20px;
+    animation: spin 2s linear infinite;
+}
+
+@keyframes spin {
+0% { transform: rotate(0deg); }
+100% { transform: rotate(360deg); }
+}  
