--- a/app/containers/MainDashboard/style.scss
+++ b/app/containers/MainDashboard/style.scss
@@ -1,4 +1,23 @@
+@import '../../styles/global-styles.scss';
+
 .Dashboard-Welcome {
-    h3 { margin-bottom: 0px;}
-    h4 { margin-top: 0px;}
+    font-size: 26px;
+}
+
+.cases {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.cases-div {
+    width: 300px;
+}
+
+.total {
+    font-size: 72px;
+}
+
+.case-font {
+    font-size: 18px;
 }
