--- a/app/components/SSTNav/style.scss
+++ b/app/components/SSTNav/style.scss
@@ -1,3 +1,5 @@
+@import '../../styles/global-styles.scss';
+
 .Package-Location {
     margin: 40px 0px;
 }
@@ -8,3 +10,16 @@
     color: inherit;
     text-decoration: inherit;
 }
+
+.link-border {
+    margin: 30px 0px;
+}
+
+.bottom-left {
+    position: absolute;
+    bottom: 0;
+}
+
+li:hover {
+    color: $light-blue;
+  }
