--- a/app/containers/RequestEMM/style.scss
+++ b/app/containers/RequestEMM/style.scss
@@ -23,10 +23,10 @@
     width: 60%
 }
 
-.test {
-    min-width: 120px;
-}
-
 .button-padding {
     margin-right: 40px;
+}
+
+.input-padding {
+    margin-bottom: 25px;
 }
