--- a/app/containers/RequestEMM/style.scss
+++ b/app/containers/RequestEMM/style.scss
@@ -30,3 +30,17 @@
 .input-padding {
     margin-bottom: 25px;
 }
+
+.loader {
+    border: 6px solid $light-grey;
+    border-top: 6px solid $light-blue;
+    border-radius: 50%;
+    width: 20px;
+    height: 20px;
+    animation: spin 2s linear infinite;
+}
+
+@keyframes spin {
+0% { transform: rotate(0deg); }
+100% { transform: rotate(360deg); }
+} 
