Add in moment for displaying date range on dashboard

--- a/app/containers/MainDashboard/style.scss
+++ b/app/containers/MainDashboard/style.scss
@@ -10,6 +10,14 @@
     justify-content: center;
 }
 
+.cases-date {
+    font-size: 42px;
+    margin-bottom: 15px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
 .cases-div {
     width: 300px;
 }
