--- a/app/containers/RequestEMM/style.scss
+++ b/app/containers/RequestEMM/style.scss
@@ -13,6 +13,18 @@
     display: flex;
 }
 
+.input-field {
+    width: 100%;
+}
+
+.placeholder {
+    opacity: .8;
+}
+
+body {
+    background: #ffffff;
+}
+
 .first-column {
     width: 50%;
 }
