--- a/app/styles/global-styles.scss
+++ b/app/styles/global-styles.scss
@@ -35,7 +35,7 @@ body,
 
 body {
   font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
-  background: #f2f2f2;
+  background: #ffffff;
 }
 
 body.fontLoaded {
