Handle the 'other' field for speciality, procedure, complication

--- a/app/containers/EMM/style.scss
+++ b/app/containers/EMM/style.scss
@@ -17,3 +17,11 @@
     font-size: 20px;
     margin-bottom: 35px;
 }
+
+.row-font {
+    font-size: 20px;
+}
+
+.margin-top {
+    margin-top: 35px;
+}
