--- a/app/styles/global-styles.scss
+++ b/app/styles/global-styles.scss
@@ -36,6 +36,7 @@ body,
 body {
   font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
   background: #ffffff;
+  background-color: #ffffff !important;
 }
 
 body.fontLoaded {
@@ -133,6 +134,7 @@ Button.primary {
 .Modal {
   top: 50%;
   left: 50%;
+  min-width: 875px;
   transform: translate(-50%, -50%);
   padding: 32px;
   outline: none;
@@ -189,3 +191,34 @@ a hr { border-bottom: none; }
 
 .dashboard-even-height [class*="MuiPaper-root"],
 .dashboard-even-height [class*="MuiCardContent-root"] { height: 100%; }
+
+/*************************************************************************/
+/**                                                                     **/
+/**                        TITLE/INPUT STYLES                           **/
+/**                                                                     **/
+/*************************************************************************/
+.header {
+  font-size: 26px;
+  line-height: 36px;
+}
+
+.Modal .MuiGrid-item.input-title,
+.app-wrapper .MuiGrid-item.input-title{
+  padding-bottom: 0;
+  padding-top: 0;
+}
+
+.input-field {
+  width: 100%;
+}
+.app-wrapper .input-field {
+  width: 100%;
+  margin-bottom: 18px;
+}
+.input-field .MuiOutlinedInput-input{
+  padding: 10.5px 14px;
+}
+
+.app-wrapper section{
+  padding: 1em 2em 0 2em;
+}
