Update permission checkbox fields

--- a/app/containers/UserManagement/style.scss
+++ b/app/containers/UserManagement/style.scss
@@ -21,11 +21,10 @@ tr:hover {
     line-height: 24px;
     padding-bottom: 0 !important;
 }
-.Modal .link{
+.Modal .link .MuiButton-label{
     color: #4EA1DA;
     font-size: 14px;
     letter-spacing: 0;
     line-height: 19px;
-    text-transform: none;
     padding: 0;
   }
