--- a/app/styles/global-styles.scss
+++ b/app/styles/global-styles.scss
@@ -207,7 +207,14 @@ a hr { border-bottom: none; }
   padding-bottom: 0;
   padding-top: 0;
 }
-
+.MuiButton-label{
+  font-family: "Noto Sans";
+  font-size: 18px;
+  letter-spacing: 0;
+  line-height: 24px;
+  text-align: center;
+  text-transform: none;
+}
 .input-field {
   width: 100%;
 }
