--- a/app/styles/global-styles.scss
+++ b/app/styles/global-styles.scss
@@ -222,8 +222,12 @@ a hr { border-bottom: none; }
   width: 100%;
   margin-bottom: 18px;
 }
+
 .input-field .MuiOutlinedInput-input{
   padding: 10.5px 14px;
+}
+.input-field .MuiOutlinedInput-inputMultiline{
+  padding: 0;
 }
 
 .app-wrapper section{
