--- a/app/containers/UserManagement/style.scss
+++ b/app/containers/UserManagement/style.scss
@@ -21,12 +21,13 @@ tr:hover {
     line-height: 24px;
     padding-bottom: 0 !important;
 }
-.Modal .link .MuiButton-label{
+.Modal .link{
     color: #4EA1DA;
     font-size: 14px;
     letter-spacing: 0;
     line-height: 19px;
     padding: 0;
+    cursor: pointer;
 }
 .MuiDialogContent-root {
     padding: 0;
