Reformat em&m cases page

--- a/app/styles/global-styles.scss
+++ b/app/styles/global-styles.scss
@@ -201,6 +201,12 @@ a hr { border-bottom: none; }
   font-size: 26px;
   line-height: 36px;
 }
+.app-wrapper .page-title {
+  margin-bottom: 30px;
+}
+.app-wrapper .page-subtitle{
+  margin-bottom: 20px;
+}
 
 .Modal .MuiGrid-item.input-title,
 .app-wrapper .MuiGrid-item.input-title{
