--- a/app/containers/MainDashboard/style.scss
+++ b/app/containers/MainDashboard/style.scss
@@ -19,11 +19,21 @@
 }
 
 .cases-div {
-    width: 300px;
+    width: 240px;
+    margin: 0 25px;
+}
+.cases-chart{
+    margin: 10px 25px;
 }
 
 .total {
-    font-size: 72px;
+    opacity: 0.8;
+  color: #111111;
+  font-family: "Noto Sans";
+  font-size: 72px;
+  font-weight: bold;
+  letter-spacing: 0;
+  line-height: 98px;
 }
 
 .case-font {
@@ -40,16 +50,41 @@
     right: 0;
     left: 0;
     bottom: 0;
-    padding-top: 25%;
+    padding-top: 15%;
     text-align: center;
 }
 
 .chart-inner-value {
-    font-weight: bold;
-    color: $dark-blue;
+    // font-weight: bold;
+    // color: $dark-blue;
+    color: #000;
     font-size: 42px;
 }
 
 .empty-space {
     margin-top: 40px;
+}
+
+.left-arrow{
+    // width: 8px;
+    // height: 13px;
+    border-top: 8px solid transparent;
+    border-bottom: 8px solid transparent;
+    border-right: 8px solid rgba(51,51,51,.3);
+    margin-right: 10px;
+}
+
+.right-arrow{
+    border-top: 8px solid transparent;
+    border-bottom: 8px solid transparent;
+    border-left: 8px solid rgba(51,51,51,.3);
+    margin-left: 10px;
+}
+
+.title-break{
+  height: 1px;
+  width: 100px;
+  border-radius: 4px 4px 0 0;
+  background-color: #004F6E;
+  
 }
