--- a/app/containers/MainDashboard/style.scss
+++ b/app/containers/MainDashboard/style.scss
@@ -66,19 +66,23 @@
 }
 
 .left-arrow{
-    // width: 8px;
-    // height: 13px;
+    width: 0;
+    height: 0;
     border-top: 8px solid transparent;
     border-bottom: 8px solid transparent;
-    border-right: 8px solid rgba(51,51,51,.3);
-    margin-right: 10px;
+    border-right: 8px solid rgba(51,51,51,.6);
+    margin-right: 10px !important;
+    margin-top: 3px !important;
 }
 
 .right-arrow{
+    width: 0;
+    height: 0;
     border-top: 8px solid transparent;
     border-bottom: 8px solid transparent;
-    border-left: 8px solid rgba(51,51,51,.3);
-    margin-left: 10px;
+    border-left: 8px solid rgba(51,51,51,.6);
+    
+    margin-top: 3px !important;
 }
 
 .title-break{
