--- a/app/styles/global-styles.scss
+++ b/app/styles/global-styles.scss
@@ -20,7 +20,7 @@ $pink: #cf0ab2;
 $grey: #A2A2A2;
 $red: #C1272D;
 
-$header-height: 55px;
+$header-height: 2.5em;
 $nav-width: 240px;
 
 html,
@@ -229,13 +229,6 @@ a hr { border-bottom: none; }
   margin-bottom: 18px;
 }
 
-.input-field .MuiOutlinedInput-input{
-  padding: 10.5px 14px;
-}
-.input-field .MuiOutlinedInput-inputMultiline{
-  padding: 0;
-}
-
 .app-wrapper section{
-  padding: 1em 2em 0 2em;
+  padding: 2.5em 2em 0 2em;
 }
