miscellaneous styling issues across all pages

--- a/app/components/UserManager/UserFields/style.scss
+++ b/app/components/UserManager/UserFields/style.scss
@@ -11,3 +11,6 @@
 .SST-Checkbox:not([class*="disabled"]) {
     svg { color: $dark-grey; }
 }
+.MuiCheckbox-colorSecondary.Mui-disabled{
+    opacity: .3;
+}
