Fix User Management bugs / Add enhancements

--- a/app/components/UserManager/UserFields/style.scss
+++ b/app/components/UserManager/UserFields/style.scss
@@ -14,3 +14,10 @@
 .MuiCheckbox-colorSecondary.Mui-disabled{
     opacity: .3;
 }
+
+.Modal .input-field{
+    margin-bottom: 8px;
+}
+.Modal .MuiFormHelperText-contained {
+    margin: 4px 0 0 0;
+}
