--- a/app/components/Modal/UserModal/UserModalStep1/style.scss
+++ b/app/components/Modal/UserModal/UserModalStep1/style.scss
@@ -24,6 +24,14 @@
     height: 20px;
     animation: spin 2s linear infinite;
 }
+.secondary-loader{
+    border: 6px solid #fff;
+    border-top: 6px solid $light-blue;
+    border-radius: 50%;
+    width: 20px;
+    height: 20px;
+    animation: spin 2s linear infinite;
+}
 
 @keyframes spin {
 0% { transform: rotate(0deg); }
