handle fields not clearing on add/update

--- a/app/styles/global-styles.scss
+++ b/app/styles/global-styles.scss
@@ -215,6 +215,10 @@ tbody tr:hover:not(.MuiTableRow-footer) {
 .secondary {
   background-color: #DCDCDC;
 }
+.info-title,
+.Modal .input-title{
+  font-size: 14px;
+}
 
 .Modal .MuiGrid-item.input-title,
 .app-wrapper .MuiGrid-item.input-title{
