Update tab/video styling

--- a/app/containers/EMMReport/style.scss
+++ b/app/containers/EMMReport/style.scss
@@ -35,7 +35,7 @@
     border-radius: 4px 4px 0 0;
     min-height: 40px;
 }
-
+.MuiTab-root.video-tab,
 .video-tab {
     // padding: 0;
     max-height: 40px;
