fix video height

--- a/app/containers/EMMReport/style.scss
+++ b/app/containers/EMMReport/style.scss
@@ -28,6 +28,9 @@
     min-width: 80px;
     height: 5px;
 }
+.azuremediaplayer.amp-flush-skin.amp-big-play-centered{
+    max-height: 550px;
+}
 
 .video-tabs{
     border: 1px solid #C8C8C8;
