clean up annotation styling and page format

--- a/app/containers/EMMReport/style.scss
+++ b/app/containers/EMMReport/style.scss
@@ -67,3 +67,11 @@
     line-height: 36px;
 }
 
+.MuiTypography-body1.annotation-secondary{
+    font-size: 14px;
+    letter-spacing: 0;
+    line-height: 19px;
+}
+.annotation-card{
+    min-height: 200px;
+}
