--- a/app/containers/EMMReport/style.scss
+++ b/app/containers/EMMReport/style.scss
@@ -46,7 +46,7 @@
 .emm-report .MuiTabs-indicator{
     min-width: 80px;
     height: 5px;
-    background-color: #028CC8;
+    background-color: #004F6E;
 }
 .azuremediaplayer.amp-flush-skin.amp-big-play-centered{
     max-height: 550px;
@@ -66,6 +66,16 @@
     text-transform: none;
     max-width: 80px;
     min-width: 80px;
+}
+
+.video-tab.disabled{
+    max-width: none;
+    width:150px;
+    font-size: 18px;
+    letter-spacing: 0;
+    line-height: 19px;
+    color: #004F6E !important;
+    padding-top: 16px;
 }
 .overview-logo{
     margin: 60px 0 20px 0;
