--- a/app/containers/EMMPublish/style.scss
+++ b/app/containers/EMMPublish/style.scss
@@ -7,3 +7,14 @@
 .emm-publish-page .MuiPaper-elevation2 {
     box-shadow: none;
 }
+
+.emm-publish-page .MuiIconButton-root,
+.emm-publish-page .MuiIconButton-root:hover{
+    background-color: unset;
+    transition: none !important;
+    margin-left: auto;
+    margin-right: auto;
+}
+.emm-publish-page .MuiTouchRipple-root{
+    display: none;
+}
