--- a/app/containers/EMMReport/style.scss
+++ b/app/containers/EMMReport/style.scss
@@ -88,9 +88,6 @@
     padding: 0 12px 0 0;
     font-size: 24px;
 }
-.overview-logo{
-    margin: 60px 0 20px 0;
-}
 .overview-subtitle{
     color: #000000;
     font-size: 18px;
@@ -106,7 +103,7 @@
     margin: 4px 0;
 }
 .overview-card{
-    padding:20px;
+    padding:0 24px;
 }
 .emm-report-nav .MuiTypography-body1 {
     opacity: 0.8;
