--- a/app/components/SSTNav/style.scss
+++ b/app/components/SSTNav/style.scss
@@ -1,23 +1,34 @@
 @import '../../styles/global-styles.scss';
 
 .Package-Location {
-    margin: 40px 0px;
+    margin: 20px 0px 40px 0;
+}
+.Package-Location img{
+    margin: auto;
 }
 
-.Package-Logo { width: 70%; }
+.Package-Logo { width: 90%; }
 
 .text-link {
     color: inherit;
     text-decoration: inherit;
+    display: list-item;
+    text-align: -webkit-match-parent;
+    padding: 8px;
+}
+.text-link.active{
+    background-color: #D8F0F9;
+    font-weight: bold;
 }
 
-.link-border {
-    margin: 30px 0px;
+.sstnav {
+    font-size: 14px;
 }
 
 .bottom-left {
-    position: absolute;
+    position: absolute !important;
     bottom: 0;
+    width: 100%;
 }
 
 .sstnav li:hover {
