Modify month picker styling

--- a/app/components/MonthPicker/style.scss
+++ b/app/components/MonthPicker/style.scss
@@ -27,7 +27,7 @@
 
 .cases-date input{
     font-size: 42px;
-    margin-bottom: 15px;
+    line-height: 57px;
     display: flex;
     align-items: center;
     justify-content: center;
