--- a/app/containers/SSChecklist/style.scss
+++ b/app/containers/SSChecklist/style.scss
@@ -1,1 +1,12 @@
 @import '../../styles/global-styles.scss';
+
+.ssc-page .next,
+.ssc-page .previous{
+    font-size: 14px;
+    line-height: 19px;
+}
+
+.ssc-page .cases-date input{
+    font-size: 26px;
+    line-height: 36px;
+}
