Add score display and tooltip

--- a/app/components/UniversalPicker/style.scss
+++ b/app/components/UniversalPicker/style.scss
@@ -1,16 +1,5 @@
 @import '../../styles/global-styles';
-.universal-picker .link{
-    color: #4EA1DA;
-    font-size: 14px;
-    letter-spacing: 0;
-    line-height: 19px;
-    padding: 0;
-    cursor: pointer;    
-}
 
-.universal-picker .link:hover{
-    text-decoration: underline;
-}
 .universal-picker .MuiInputBase-root{
     background-color: white;
 }
@@ -19,6 +8,6 @@
 }
 
 .MuiListSubheader-root{
-    font-size: 14px;
-    line-height: 19px;
+    font-size: 14px !important;
+    line-height: 19px !important;
 }
