--- a/app/styles/global-styles.scss
+++ b/app/styles/global-styles.scss
@@ -173,6 +173,19 @@ a hr { border-bottom: none; }
   margin: 30px auto;
 }
 
+.link{
+  color: #4EA1DA;
+  font-size: 14px;
+  letter-spacing: 0;
+  line-height: 19px;
+  padding: 0;
+  cursor: pointer;    
+}
+
+.link:hover{
+  text-decoration: underline;
+}
+
 /*************************************************************************/
 /**                                                                     **/
 /**                             CARD STYLES                             **/
