--- a/app/containers/SSChecklist/style.scss
+++ b/app/containers/SSChecklist/style.scss
@@ -1,8 +1,10 @@
 @import '../../styles/global-styles.scss';
 
+$ssc-picker-height: 150px;
+
 .ssc-page{
     background-color: #F5F5F5;
-    height: 100%;
+    height: calc(100% + #{$ssc-picker-height});
 }
 
 .ssc-page .next,
@@ -27,4 +29,17 @@
 .ssc-card.MuiCard-root{
     box-shadow: 0 2px 4px 0 rgba(0,0,0,0.2);
     border-radius: 8px !important;
+    padding: 20px 0;
+}
+.ssc-picker-container{
+    position: absolute;
+    width: calc(100% - #{$nav-width});
+    z-index: 9990;
+}
+.ssc-main{
+    padding: 40px;
+    max-width: 1116px;
+    margin: auto;
+    top: $ssc-picker-height;
+    position: relative;
 }
