--- a/app/containers/SSChecklist/style.scss
+++ b/app/containers/SSChecklist/style.scss
@@ -52,3 +52,10 @@ $ssc-picker-height: 150px;
     letter-spacing: 0;
     line-height: 24px;
 }
+
+.circle:before {
+    content: ' \25CF';
+    font-size: 32px;
+    line-height: 0;
+    // margin-left: 8px;
+  }
