Complete saving filter - Move barchart to component

--- a/app/containers/SSChecklist/style.scss
+++ b/app/containers/SSChecklist/style.scss
@@ -31,7 +31,8 @@ $ssc-picker-height: 150px;
     border-radius: 8px !important;
 }
 .ssc-card .MuiCardContent-root{
-    margin: 10px 0px;
+    margin: 0;
+    padding: 24px 16px;
 }
 .ssc-picker-container{
     position: absolute;
