--- a/app/containers/SSChecklist/style.scss
+++ b/app/containers/SSChecklist/style.scss
@@ -56,6 +56,14 @@ $ssc-picker-height: 150px;
     line-height: 24px;
 }
 
+.ssc-message{
+  font-family: "Noto Sans";
+  font-size: 26px;
+  letter-spacing: 0;
+  line-height: 36px;
+  text-align: center;
+}
+
 .circle:before {
     content: ' \25CF';
     font-size: 32px;
