load horizontal bar chart from datapoint

--- a/app/containers/SSChecklist/style.scss
+++ b/app/containers/SSChecklist/style.scss
@@ -34,6 +34,12 @@ $ssc-picker-height: 150px;
     margin: 0;
     padding: 24px 16px;
 }
+.ssc-card.InfographicParagraph .MuiCardContent-root,
+.ssc-card.MuiCard-root.InfographicParagraph{
+    box-shadow: none;
+    background-color: unset;
+    padding-left: 0;
+}
 .ssc-picker-container{
     position: absolute;
     width: calc(100% - #{$nav-width});
