use report score component in emm reports

--- a/app/containers/EMMReports/style.scss
+++ b/app/containers/EMMReports/style.scss
@@ -4,6 +4,8 @@ $selectorHeight: 40px;
 
 .EMM-REPORTS {
     padding: 24px 120px;
+    max-width: 1920px;
+    margin: 0px auto;
     .close-emm {
         cursor: pointer;
         position: absolute;
