--- a/app/containers/EMMReports/style.scss
+++ b/app/containers/EMMReports/style.scss
@@ -6,6 +6,7 @@ $selectorHeight: 40px;
     padding: 24px 120px;
     max-width: 1920px;
     margin: 0px auto;
+    overflow-y: auto;
     .close-emm {
         cursor: pointer;
         position: absolute;
