--- a/app/containers/SSChecklist/style.scss
+++ b/app/containers/SSChecklist/style.scss
@@ -6,6 +6,10 @@ $ssc-picker-height: 150px;
     background-color: #F5F5F5;
     height: calc(100% + #{$ssc-picker-height});
 }
+.ssc-page .overlay{
+    top: $ssc-picker-height;
+    background-color: #F5F5F5;
+}
 
 .ssc-page .next,
 .ssc-page .previous{
@@ -55,8 +59,9 @@ $ssc-picker-height: 150px;
     max-width: 1198px;
     margin: auto;
     top: $ssc-picker-height;
-    position: relative;
+    // position: relative;
 }
+
 
 .ssc-message{
   font-family: "Noto Sans";
