--- a/app/containers/EMMReports/EMMPhaseAnalysis/EMMPhaseSelector/style.scss
+++ b/app/containers/EMMReports/EMMPhaseAnalysis/EMMPhaseSelector/style.scss
@@ -1,4 +1,4 @@
-@import '../../../styles/global-styles.scss';
+@import '../../../../styles/global-styles.scss';
 
 .Emm-Phase-Selector {
   display: flex;
