--- a/app/components/Report/BarChart/style.scss
+++ b/app/components/Report/BarChart/style.scss
@@ -4,15 +4,15 @@
   font-size: 26px;
   letter-spacing: 0;
   line-height: 36px;
-  margin-bottom: 16px !important;
+  margin-bottom: 4px !important;
 }
 
-.chart-subtitle{
+.bar-chart  .chart-subtitle{
   font-size: 14px;
   font-style: italic;
   letter-spacing: 0;
   line-height: 19px;
-  margin-bottom: 32px;
+  margin-bottom: 32px !important;
 }
 .chart-score{
   color: #005979;
@@ -22,6 +22,9 @@
   letter-spacing: 0;
   line-height: 24px;
   text-align: right;
+}
+.bar-chart{
+  text-align: center;
 }
 
 .bar-chart .c3-axis .tick line{
@@ -69,4 +72,13 @@
   line-height: 1.4em;
   border-radius: 4px;
   background-color: rgba(97, 97, 97, 0.9);
+}
+
+.bar-chart .display-text{
+  color: #004F6E;
+  font-family: "Noto Sans";
+  font-size: 18px;
+  font-style: italic;
+  letter-spacing: 0;
+  line-height: 24px;
 }
