--- a/app/components/Report/StackedBarChart/style.scss
+++ b/app/components/Report/StackedBarChart/style.scss
@@ -59,7 +59,7 @@
   line-height: 24px;
 }
 
-.bar-chart-detailed-legend{
+.stacked-barchart-detailed .bar-chart-detailed-legend{
   display: flex;
   margin-top: 32px;
   flex-direction: column;
