--- a/app/components/Report/BarChartDetailed/style.scss
+++ b/app/components/Report/BarChartDetailed/style.scss
@@ -51,7 +51,7 @@
 }
 
 
-.bar-chart-detailed-legend{
+.bar-chart-detailed .bar-chart-detailed-legend{
   display: flex;
   justify-content: space-evenly;
   margin-top: 16px;
