--- a/app/containers/EMMReports/EMMPhaseAnalysis/style.scss
+++ b/app/containers/EMMReports/EMMPhaseAnalysis/style.scss
@@ -13,6 +13,10 @@ $paddingSize: 40px;
   }
   h2 {
     font-size: 26px;
-    margin-bottom: 16px;
+    line-height: 36px;
+    margin-bottom: 8px;
+  }
+  .phase-duration {
+    margin-bottom: 8px;
   }
 }
