--- a/app/containers/EMMReports/style.scss
+++ b/app/containers/EMMReports/style.scss
@@ -1,12 +1,11 @@
 @import '../../styles/global-styles.scss';
 
-$selectorHeight: 40px;
-
 .EMM-REPORTS {
     padding: 24px 120px;
     max-width: 1920px;
     margin: 0px auto;
     overflow-y: auto;
+    font-size: 18px;
     .close-emm {
         cursor: pointer;
         position: absolute;
@@ -29,14 +28,14 @@ $selectorHeight: 40px;
 .EMM-Tab-Selector {
     display: flex;
     width: 410px;
-    height: $selectorHeight;
+    height: 40px;
     margin: 14px auto 0px;
     .EMM-Tab {
         width: 50%;
         color: $blue;
         border: 1px solid $blue;
         background: $white;
-        line-height: $selectorHeight;
+        line-height: 36px;
         cursor: pointer;
         &:first-child {
             border-radius: 30px 0px 0px 30px;
